// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should generate HTML report excluding inactive users 1`] = `
"<!DOCTYPE html>
<html>
<head>
    <title>User Activity Report</title>
    <style>
        body { font-family: Arial, sans-serif; margin: 20px; }
        .header { background: #f5f5f5; padding: 20px; border-radius: 5px; }
        .summary { display: flex; gap: 20px; margin: 20px 0; }
        .metric { background: #e3f2fd; padding: 15px; border-radius: 5px; text-align: center; }
        table { width: 100%; border-collapse: collapse; margin-top: 20px; }
        th, td { border: 1px solid #ddd; padding: 8px; text-align: left; }
        th { background-color: #f2f2f2; }
        .active { color: green; font-weight: bold; }
        .inactive { color: red; }
    </style>
</head>
<body>
    <div class="header">
        <h1>User Activity Report</h1>
        <p>Period: 2024-01-01 to 2024-01-15</p>
    </div>
    
    <div class="summary">
        <div class="metric">
            <h3>4</h3>
            <p>Total Users</p>
        </div>
        <div class="metric">
            <h3>2</h3>
            <p>Active Users</p>
        </div>
        <div class="metric">
            <h3>50%</h3>
            <p>Activity Rate</p>
        </div>
    </div>
    
    <table>
        <thead>
            <tr>
                <th>Name</th>
                <th>Email</th>
                <th>Status</th>
                <th>Login Count</th>
                <th>Account Age (days)</th>
            </tr>
        </thead>
        <tbody>
            
                <tr>
                    <td>Jane Smith</td>
                    <td>jane.smith@example.com</td>
                    <td class="active">
                        Active
                    </td>
                    <td>75</td>
                    <td>180</td>
                </tr>
            
                <tr>
                    <td>John Doe</td>
                    <td>john.doe@example.com</td>
                    <td class="active">
                        Active
                    </td>
                    <td>25</td>
                    <td>365</td>
                </tr>
            
        </tbody>
    </table>
</body>
</html>"
`;

exports[`should generate HTML report sorted by login count descending 1`] = `
"<!DOCTYPE html>
<html>
<head>
    <title>User Activity Report</title>
    <style>
        body { font-family: Arial, sans-serif; margin: 20px; }
        .header { background: #f5f5f5; padding: 20px; border-radius: 5px; }
        .summary { display: flex; gap: 20px; margin: 20px 0; }
        .metric { background: #e3f2fd; padding: 15px; border-radius: 5px; text-align: center; }
        table { width: 100%; border-collapse: collapse; margin-top: 20px; }
        th, td { border: 1px solid #ddd; padding: 8px; text-align: left; }
        th { background-color: #f2f2f2; }
        .active { color: green; font-weight: bold; }
        .inactive { color: red; }
    </style>
</head>
<body>
    <div class="header">
        <h1>User Activity Report</h1>
        <p>Period: 2024-01-01 to 2024-01-15</p>
    </div>
    
    <div class="summary">
        <div class="metric">
            <h3>4</h3>
            <p>Total Users</p>
        </div>
        <div class="metric">
            <h3>2</h3>
            <p>Active Users</p>
        </div>
        <div class="metric">
            <h3>50%</h3>
            <p>Activity Rate</p>
        </div>
    </div>
    
    <table>
        <thead>
            <tr>
                <th>Name</th>
                <th>Email</th>
                <th>Status</th>
                <th>Login Count</th>
                <th>Account Age (days)</th>
            </tr>
        </thead>
        <tbody>
            
                <tr>
                    <td>Jane Smith</td>
                    <td>jane.smith@example.com</td>
                    <td class="active">
                        Active
                    </td>
                    <td>75</td>
                    <td>180</td>
                </tr>
            
                <tr>
                    <td>John Doe</td>
                    <td>john.doe@example.com</td>
                    <td class="active">
                        Active
                    </td>
                    <td>25</td>
                    <td>365</td>
                </tr>
            
                <tr>
                    <td>Bob Johnson</td>
                    <td>bob.johnson@example.com</td>
                    <td class="inactive">
                        Inactive
                    </td>
                    <td>5</td>
                    <td>730</td>
                </tr>
            
                <tr>
                    <td>Alice Brown</td>
                    <td>alice.brown@example.com</td>
                    <td class="inactive">
                        Inactive
                    </td>
                    <td>0</td>
                    <td>15</td>
                </tr>
            
        </tbody>
    </table>
</body>
</html>"
`;

exports[`should generate HTML report with default config 1`] = `
"<!DOCTYPE html>
<html>
<head>
    <title>User Activity Report</title>
    <style>
        body { font-family: Arial, sans-serif; margin: 20px; }
        .header { background: #f5f5f5; padding: 20px; border-radius: 5px; }
        .summary { display: flex; gap: 20px; margin: 20px 0; }
        .metric { background: #e3f2fd; padding: 15px; border-radius: 5px; text-align: center; }
        table { width: 100%; border-collapse: collapse; margin-top: 20px; }
        th, td { border: 1px solid #ddd; padding: 8px; text-align: left; }
        th { background-color: #f2f2f2; }
        .active { color: green; font-weight: bold; }
        .inactive { color: red; }
    </style>
</head>
<body>
    <div class="header">
        <h1>User Activity Report</h1>
        <p>Period: 2024-01-01 to 2024-01-15</p>
    </div>
    
    <div class="summary">
        <div class="metric">
            <h3>4</h3>
            <p>Total Users</p>
        </div>
        <div class="metric">
            <h3>2</h3>
            <p>Active Users</p>
        </div>
        <div class="metric">
            <h3>50%</h3>
            <p>Activity Rate</p>
        </div>
    </div>
    
    <table>
        <thead>
            <tr>
                <th>Name</th>
                <th>Email</th>
                <th>Status</th>
                <th>Login Count</th>
                <th>Account Age (days)</th>
            </tr>
        </thead>
        <tbody>
            
                <tr>
                    <td>Alice Brown</td>
                    <td>alice.brown@example.com</td>
                    <td class="inactive">
                        Inactive
                    </td>
                    <td>0</td>
                    <td>15</td>
                </tr>
            
                <tr>
                    <td>Bob Johnson</td>
                    <td>bob.johnson@example.com</td>
                    <td class="inactive">
                        Inactive
                    </td>
                    <td>5</td>
                    <td>730</td>
                </tr>
            
                <tr>
                    <td>Jane Smith</td>
                    <td>jane.smith@example.com</td>
                    <td class="active">
                        Active
                    </td>
                    <td>75</td>
                    <td>180</td>
                </tr>
            
                <tr>
                    <td>John Doe</td>
                    <td>john.doe@example.com</td>
                    <td class="active">
                        Active
                    </td>
                    <td>25</td>
                    <td>365</td>
                </tr>
            
        </tbody>
    </table>
</body>
</html>"
`;

exports[`should generate JSON report 1`] = `
{
  "generatedAt": "2024-01-15T12:00:00.000Z",
  "period": {
    "endDate": "2024-01-15T23:59:59.000Z",
    "startDate": "2024-01-01T00:00:00.000Z",
  },
  "summary": {
    "activeUsers": 2,
    "averageAccountAge": 322.5,
    "averageLoginCount": 26.25,
    "inactiveUsers": 2,
    "totalUsers": 4,
  },
  "title": "User Activity Report",
  "users": [
    {
      "accountAge": 15,
      "email": "alice.brown@example.com",
      "id": "user-4",
      "isActive": false,
      "loginCount": 0,
      "name": "Alice Brown",
    },
    {
      "accountAge": 730,
      "email": "bob.johnson@example.com",
      "id": "user-3",
      "isActive": false,
      "lastLoginAt": "2023-12-01T16:45:00.000Z",
      "loginCount": 5,
      "name": "Bob Johnson",
    },
    {
      "accountAge": 180,
      "email": "jane.smith@example.com",
      "id": "user-2",
      "isActive": true,
      "lastLoginAt": "2024-01-14T09:15:00.000Z",
      "loginCount": 75,
      "name": "Jane Smith",
    },
    {
      "accountAge": 365,
      "email": "john.doe@example.com",
      "id": "user-1",
      "isActive": true,
      "lastLoginAt": "2024-01-10T14:30:00.000Z",
      "loginCount": 25,
      "name": "John Doe",
    },
  ],
}
`;

exports[`should generate Markdown report 1`] = `
"# User Activity Summary

## Summary
- **Period:** 2024-01-01 to 2024-01-15
- **Total Users:** 4
- **Active Users:** 2
- **Inactive Users:** 2
- **Activity Rate:** 50%

## User Details

| Name | Email | Status | Login Count | Account Age |
|------|-------|--------|-------------|-------------|
| Alice Brown | alice.brown@example.com | ❌ Inactive | 0 | 15 days |
| Bob Johnson | bob.johnson@example.com | ❌ Inactive | 5 | 730 days |
| Jane Smith | jane.smith@example.com | ✅ Active | 75 | 180 days |
| John Doe | john.doe@example.com | ✅ Active | 25 | 365 days |"
`;

exports[`should generate dashboard summary object 1`] = `
{
  "metrics": {
    "activeUsers": 2,
    "activityRate": 50,
    "averageAccountAge": 323,
    "averageLoginCount": 26.25,
    "inactiveUsers": 2,
    "totalUsers": 4,
  },
  "period": {
    "durationDays": 15,
    "from": "2024-01-01",
    "to": "2024-01-15",
  },
  "recentUsers": [
    {
      "accountAge": 15,
      "isActive": false,
      "name": "Alice Brown",
    },
  ],
  "reportDate": "2024-01-15T12:00:00.000Z",
  "usersByActivity": {
    "highActivity": 1,
    "lowActivity": 2,
    "mediumActivity": 1,
  },
}
`;

exports[`should generate profile card for active user 1`] = `
{
  "account": {
    "ageCategory": "Established",
    "ageInDays": 365,
    "engagementLevel": "Lightly Engaged",
  },
  "activity": {
    "lastLogin": {
      "date": "2024-01-10",
      "daysAgo": 5,
    },
    "loginCount": 25,
    "status": "Active",
  },
  "profile": {
    "email": "john.doe@example.com",
    "id": "user-1",
    "name": "John Doe",
  },
}
`;

exports[`should generate profile card for highly engaged user 1`] = `
{
  "account": {
    "ageCategory": "Recent",
    "ageInDays": 180,
    "engagementLevel": "Moderately Engaged",
  },
  "activity": {
    "lastLogin": {
      "date": "2024-01-14",
      "daysAgo": 2,
    },
    "loginCount": 75,
    "status": "Active",
  },
  "profile": {
    "email": "jane.smith@example.com",
    "id": "user-2",
    "name": "Jane Smith",
  },
}
`;

exports[`should generate profile card for inactive user 1`] = `
{
  "account": {
    "ageCategory": "Veteran",
    "ageInDays": 730,
    "engagementLevel": "Dormant",
  },
  "activity": {
    "lastLogin": {
      "date": "2023-12-01",
      "daysAgo": 45,
    },
    "loginCount": 5,
    "status": "Inactive",
  },
  "profile": {
    "email": "bob.johnson@example.com",
    "id": "user-3",
    "name": "Bob Johnson",
  },
}
`;

exports[`should generate profile card for user who never logged in 1`] = `
{
  "account": {
    "ageCategory": "New",
    "ageInDays": 15,
    "engagementLevel": "Dormant",
  },
  "activity": {
    "lastLogin": null,
    "loginCount": 0,
    "status": "Inactive",
  },
  "profile": {
    "email": "alice.brown@example.com",
    "id": "user-4",
    "name": "Alice Brown",
  },
}
`;

exports[`should handle different report configurations consistently > config-0-html 1`] = `
"<!DOCTYPE html>
<html>
<head>
    <title>User Activity Report</title>
    <style>
        body { font-family: Arial, sans-serif; margin: 20px; }
        .header { background: #f5f5f5; padding: 20px; border-radius: 5px; }
        .summary { display: flex; gap: 20px; margin: 20px 0; }
        .metric { background: #e3f2fd; padding: 15px; border-radius: 5px; text-align: center; }
        table { width: 100%; border-collapse: collapse; margin-top: 20px; }
        th, td { border: 1px solid #ddd; padding: 8px; text-align: left; }
        th { background-color: #f2f2f2; }
        .active { color: green; font-weight: bold; }
        .inactive { color: red; }
    </style>
</head>
<body>
    <div class="header">
        <h1>User Activity Report</h1>
        <p>Period: 2024-01-01 to 2024-01-15</p>
    </div>
    
    <div class="summary">
        <div class="metric">
            <h3>4</h3>
            <p>Total Users</p>
        </div>
        <div class="metric">
            <h3>2</h3>
            <p>Active Users</p>
        </div>
        <div class="metric">
            <h3>50%</h3>
            <p>Activity Rate</p>
        </div>
    </div>
    
    <table>
        <thead>
            <tr>
                <th>Name</th>
                <th>Email</th>
                <th>Status</th>
                <th>Login Count</th>
                <th>Account Age (days)</th>
            </tr>
        </thead>
        <tbody>
            
                <tr>
                    <td>Alice Brown</td>
                    <td>alice.brown@example.com</td>
                    <td class="inactive">
                        Inactive
                    </td>
                    <td>0</td>
                    <td>15</td>
                </tr>
            
                <tr>
                    <td>Bob Johnson</td>
                    <td>bob.johnson@example.com</td>
                    <td class="inactive">
                        Inactive
                    </td>
                    <td>5</td>
                    <td>730</td>
                </tr>
            
                <tr>
                    <td>Jane Smith</td>
                    <td>jane.smith@example.com</td>
                    <td class="active">
                        Active
                    </td>
                    <td>75</td>
                    <td>180</td>
                </tr>
            
                <tr>
                    <td>John Doe</td>
                    <td>john.doe@example.com</td>
                    <td class="active">
                        Active
                    </td>
                    <td>25</td>
                    <td>365</td>
                </tr>
            
        </tbody>
    </table>
</body>
</html>"
`;

exports[`should handle different report configurations consistently > config-1-html 1`] = `
"<!DOCTYPE html>
<html>
<head>
    <title>User Activity Report</title>
    <style>
        body { font-family: Arial, sans-serif; margin: 20px; }
        .header { background: #f5f5f5; padding: 20px; border-radius: 5px; }
        .summary { display: flex; gap: 20px; margin: 20px 0; }
        .metric { background: #e3f2fd; padding: 15px; border-radius: 5px; text-align: center; }
        table { width: 100%; border-collapse: collapse; margin-top: 20px; }
        th, td { border: 1px solid #ddd; padding: 8px; text-align: left; }
        th { background-color: #f2f2f2; }
        .active { color: green; font-weight: bold; }
        .inactive { color: red; }
    </style>
</head>
<body>
    <div class="header">
        <h1>User Activity Report</h1>
        <p>Period: 2024-01-01 to 2024-01-15</p>
    </div>
    
    <div class="summary">
        <div class="metric">
            <h3>4</h3>
            <p>Total Users</p>
        </div>
        <div class="metric">
            <h3>2</h3>
            <p>Active Users</p>
        </div>
        <div class="metric">
            <h3>50%</h3>
            <p>Activity Rate</p>
        </div>
    </div>
    
    <table>
        <thead>
            <tr>
                <th>Name</th>
                <th>Email</th>
                <th>Status</th>
                <th>Login Count</th>
                <th>Account Age (days)</th>
            </tr>
        </thead>
        <tbody>
            
                <tr>
                    <td>Jane Smith</td>
                    <td>jane.smith@example.com</td>
                    <td class="active">
                        Active
                    </td>
                    <td>75</td>
                    <td>180</td>
                </tr>
            
                <tr>
                    <td>John Doe</td>
                    <td>john.doe@example.com</td>
                    <td class="active">
                        Active
                    </td>
                    <td>25</td>
                    <td>365</td>
                </tr>
            
        </tbody>
    </table>
</body>
</html>"
`;

exports[`should handle different report configurations consistently > config-2-markdown 1`] = `
"# User Activity Report

## Summary
- **Period:** 2024-01-01 to 2024-01-15
- **Total Users:** 4
- **Active Users:** 2
- **Inactive Users:** 2
- **Activity Rate:** 50%

## User Details

| Name | Email | Status | Login Count | Account Age |
|------|-------|--------|-------------|-------------|
| Alice Brown | alice.brown@example.com | ❌ Inactive | 0 | 15 days |
| Bob Johnson | bob.johnson@example.com | ❌ Inactive | 5 | 730 days |
| Jane Smith | jane.smith@example.com | ✅ Active | 75 | 180 days |
| John Doe | john.doe@example.com | ✅ Active | 25 | 365 days |"
`;

exports[`should handle different report configurations consistently > config-3-json 1`] = `
"{
  "title": "User Activity Report",
  "generatedAt": "2024-01-15T12:00:00.000Z",
  "period": {
    "startDate": "2024-01-01T00:00:00.000Z",
    "endDate": "2024-01-15T23:59:59.000Z"
  },
  "summary": {
    "totalUsers": 4,
    "activeUsers": 2,
    "inactiveUsers": 2,
    "averageLoginCount": 26.25,
    "averageAccountAge": 322.5
  },
  "users": [
    {
      "id": "user-1",
      "name": "John Doe",
      "email": "john.doe@example.com",
      "loginCount": 25,
      "lastLoginAt": "2024-01-10T14:30:00.000Z",
      "isActive": true,
      "accountAge": 365
    },
    {
      "id": "user-2",
      "name": "Jane Smith",
      "email": "jane.smith@example.com",
      "loginCount": 75,
      "lastLoginAt": "2024-01-14T09:15:00.000Z",
      "isActive": true,
      "accountAge": 180
    },
    {
      "id": "user-3",
      "name": "Bob Johnson",
      "email": "bob.johnson@example.com",
      "loginCount": 5,
      "lastLoginAt": "2023-12-01T16:45:00.000Z",
      "isActive": false,
      "accountAge": 730
    },
    {
      "id": "user-4",
      "name": "Alice Brown",
      "email": "alice.brown@example.com",
      "loginCount": 0,
      "isActive": false,
      "accountAge": 15
    }
  ]
}"
`;

exports[`should handle edge case with all inactive users 1`] = `
{
  "metrics": {
    "activeUsers": 0,
    "activityRate": 0,
    "averageAccountAge": 323,
    "averageLoginCount": 26.25,
    "inactiveUsers": 4,
    "totalUsers": 4,
  },
  "period": {
    "durationDays": 15,
    "from": "2024-01-01",
    "to": "2024-01-15",
  },
  "recentUsers": [
    {
      "accountAge": 15,
      "isActive": false,
      "name": "Alice Brown",
    },
  ],
  "reportDate": "2024-01-15T12:00:00.000Z",
  "usersByActivity": {
    "highActivity": 1,
    "lowActivity": 2,
    "mediumActivity": 1,
  },
}
`;

exports[`should handle edge case with no users 1`] = `
{
  "metrics": {
    "activeUsers": 0,
    "activityRate": 0,
    "averageAccountAge": 0,
    "averageLoginCount": 0,
    "inactiveUsers": 0,
    "totalUsers": 0,
  },
  "period": {
    "durationDays": 15,
    "from": "2024-01-01",
    "to": "2024-01-15",
  },
  "recentUsers": [],
  "reportDate": "2024-01-15T12:00:00.000Z",
  "usersByActivity": {
    "highActivity": 0,
    "lowActivity": 0,
    "mediumActivity": 0,
  },
}
`;

exports[`should handle special characters in user data > special-chars-html 1`] = `
"<!DOCTYPE html>
<html>
<head>
    <title>User Activity Report</title>
    <style>
        body { font-family: Arial, sans-serif; margin: 20px; }
        .header { background: #f5f5f5; padding: 20px; border-radius: 5px; }
        .summary { display: flex; gap: 20px; margin: 20px 0; }
        .metric { background: #e3f2fd; padding: 15px; border-radius: 5px; text-align: center; }
        table { width: 100%; border-collapse: collapse; margin-top: 20px; }
        th, td { border: 1px solid #ddd; padding: 8px; text-align: left; }
        th { background-color: #f2f2f2; }
        .active { color: green; font-weight: bold; }
        .inactive { color: red; }
    </style>
</head>
<body>
    <div class="header">
        <h1>User Activity Report</h1>
        <p>Period: 2024-01-01 to 2024-01-15</p>
    </div>
    
    <div class="summary">
        <div class="metric">
            <h3>1</h3>
            <p>Total Users</p>
        </div>
        <div class="metric">
            <h3>1</h3>
            <p>Active Users</p>
        </div>
        <div class="metric">
            <h3>100%</h3>
            <p>Activity Rate</p>
        </div>
    </div>
    
    <table>
        <thead>
            <tr>
                <th>Name</th>
                <th>Email</th>
                <th>Status</th>
                <th>Login Count</th>
                <th>Account Age (days)</th>
            </tr>
        </thead>
        <tbody>
            
                <tr>
                    <td>José María "El Niño" O'Connor & Associates <script>alert("xss")</script></td>
                    <td>josé.maría@example.com</td>
                    <td class="active">
                        Active
                    </td>
                    <td>10</td>
                    <td>100</td>
                </tr>
            
        </tbody>
    </table>
</body>
</html>"
`;

exports[`should handle special characters in user data > special-chars-json 1`] = `
{
  "generatedAt": "2024-01-15T12:00:00.000Z",
  "period": {
    "endDate": "2024-01-15T23:59:59.000Z",
    "startDate": "2024-01-01T00:00:00.000Z",
  },
  "summary": {
    "activeUsers": 1,
    "averageAccountAge": 100,
    "averageLoginCount": 10,
    "inactiveUsers": 0,
    "totalUsers": 1,
  },
  "title": "User Activity Report",
  "users": [
    {
      "accountAge": 100,
      "email": "josé.maría@example.com",
      "id": "special-user",
      "isActive": true,
      "lastLoginAt": "2024-01-10T14:30:00.000Z",
      "loginCount": 10,
      "name": "José María "El Niño" O'Connor & Associates <script>alert("xss")</script>",
    },
  ],
}
`;

exports[`should handle special characters in user data > special-chars-markdown 1`] = `
"# User Activity Report

## Summary
- **Period:** 2024-01-01 to 2024-01-15
- **Total Users:** 1
- **Active Users:** 1
- **Inactive Users:** 0
- **Activity Rate:** 100%

## User Details

| Name | Email | Status | Login Count | Account Age |
|------|-------|--------|-------------|-------------|
| José María "El Niño" O'Connor & Associates <script>alert("xss")</script> | josé.maría@example.com | ✅ Active | 10 | 100 days |"
`;

exports[`should maintain backwards compatibility for dashboard structure 1`] = `
{
  "metrics": {
    "activeUsers": 2,
    "activityRate": 50,
    "averageAccountAge": 323,
    "averageLoginCount": 26.25,
    "inactiveUsers": 2,
    "totalUsers": 4,
  },
  "period": {
    "durationDays": 15,
    "from": "2024-01-01",
    "to": "2024-01-15",
  },
  "recentUsers": [
    {
      "accountAge": 15,
      "isActive": false,
      "name": "Alice Brown",
    },
  ],
  "reportDate": "2024-01-15T12:00:00.000Z",
  "usersByActivity": {
    "highActivity": 1,
    "lowActivity": 2,
    "mediumActivity": 1,
  },
}
`;

exports[`should maintain consistent formatting across different data sets > dataset-0-dashboard 1`] = `
{
  "metrics": {
    "activeUsers": 2,
    "activityRate": 200,
    "averageAccountAge": 323,
    "averageLoginCount": 26.25,
    "inactiveUsers": 2,
    "totalUsers": 1,
  },
  "period": {
    "durationDays": 15,
    "from": "2024-01-01",
    "to": "2024-01-15",
  },
  "recentUsers": [],
  "reportDate": "2024-01-15T12:00:00.000Z",
  "usersByActivity": {
    "highActivity": 0,
    "lowActivity": 0,
    "mediumActivity": 1,
  },
}
`;

exports[`should maintain consistent formatting across different data sets > dataset-0-html 1`] = `
"<!DOCTYPE html>
<html>
<head>
    <title>User Activity Report</title>
    <style>
        body { font-family: Arial, sans-serif; margin: 20px; }
        .header { background: #f5f5f5; padding: 20px; border-radius: 5px; }
        .summary { display: flex; gap: 20px; margin: 20px 0; }
        .metric { background: #e3f2fd; padding: 15px; border-radius: 5px; text-align: center; }
        table { width: 100%; border-collapse: collapse; margin-top: 20px; }
        th, td { border: 1px solid #ddd; padding: 8px; text-align: left; }
        th { background-color: #f2f2f2; }
        .active { color: green; font-weight: bold; }
        .inactive { color: red; }
    </style>
</head>
<body>
    <div class="header">
        <h1>User Activity Report</h1>
        <p>Period: 2024-01-01 to 2024-01-15</p>
    </div>
    
    <div class="summary">
        <div class="metric">
            <h3>1</h3>
            <p>Total Users</p>
        </div>
        <div class="metric">
            <h3>2</h3>
            <p>Active Users</p>
        </div>
        <div class="metric">
            <h3>200%</h3>
            <p>Activity Rate</p>
        </div>
    </div>
    
    <table>
        <thead>
            <tr>
                <th>Name</th>
                <th>Email</th>
                <th>Status</th>
                <th>Login Count</th>
                <th>Account Age (days)</th>
            </tr>
        </thead>
        <tbody>
            
                <tr>
                    <td>John Doe</td>
                    <td>john.doe@example.com</td>
                    <td class="active">
                        Active
                    </td>
                    <td>25</td>
                    <td>365</td>
                </tr>
            
        </tbody>
    </table>
</body>
</html>"
`;

exports[`should maintain consistent formatting across different data sets > dataset-1-dashboard 1`] = `
{
  "metrics": {
    "activeUsers": 2,
    "activityRate": 100,
    "averageAccountAge": 323,
    "averageLoginCount": 26.25,
    "inactiveUsers": 0,
    "totalUsers": 2,
  },
  "period": {
    "durationDays": 15,
    "from": "2024-01-01",
    "to": "2024-01-15",
  },
  "recentUsers": [],
  "reportDate": "2024-01-15T12:00:00.000Z",
  "usersByActivity": {
    "highActivity": 1,
    "lowActivity": 0,
    "mediumActivity": 1,
  },
}
`;

exports[`should maintain consistent formatting across different data sets > dataset-1-html 1`] = `
"<!DOCTYPE html>
<html>
<head>
    <title>User Activity Report</title>
    <style>
        body { font-family: Arial, sans-serif; margin: 20px; }
        .header { background: #f5f5f5; padding: 20px; border-radius: 5px; }
        .summary { display: flex; gap: 20px; margin: 20px 0; }
        .metric { background: #e3f2fd; padding: 15px; border-radius: 5px; text-align: center; }
        table { width: 100%; border-collapse: collapse; margin-top: 20px; }
        th, td { border: 1px solid #ddd; padding: 8px; text-align: left; }
        th { background-color: #f2f2f2; }
        .active { color: green; font-weight: bold; }
        .inactive { color: red; }
    </style>
</head>
<body>
    <div class="header">
        <h1>User Activity Report</h1>
        <p>Period: 2024-01-01 to 2024-01-15</p>
    </div>
    
    <div class="summary">
        <div class="metric">
            <h3>2</h3>
            <p>Total Users</p>
        </div>
        <div class="metric">
            <h3>2</h3>
            <p>Active Users</p>
        </div>
        <div class="metric">
            <h3>100%</h3>
            <p>Activity Rate</p>
        </div>
    </div>
    
    <table>
        <thead>
            <tr>
                <th>Name</th>
                <th>Email</th>
                <th>Status</th>
                <th>Login Count</th>
                <th>Account Age (days)</th>
            </tr>
        </thead>
        <tbody>
            
                <tr>
                    <td>Jane Smith</td>
                    <td>jane.smith@example.com</td>
                    <td class="active">
                        Active
                    </td>
                    <td>75</td>
                    <td>180</td>
                </tr>
            
                <tr>
                    <td>John Doe</td>
                    <td>john.doe@example.com</td>
                    <td class="active">
                        Active
                    </td>
                    <td>25</td>
                    <td>365</td>
                </tr>
            
        </tbody>
    </table>
</body>
</html>"
`;

exports[`should maintain consistent formatting across different data sets > dataset-2-dashboard 1`] = `
{
  "metrics": {
    "activeUsers": 2,
    "activityRate": 25,
    "averageAccountAge": 323,
    "averageLoginCount": 26.25,
    "inactiveUsers": 2,
    "totalUsers": 8,
  },
  "period": {
    "durationDays": 15,
    "from": "2024-01-01",
    "to": "2024-01-15",
  },
  "recentUsers": [
    {
      "accountAge": 15,
      "isActive": false,
      "name": "Alice Brown",
    },
    {
      "accountAge": 15,
      "isActive": false,
      "name": "Alice Brown",
    },
  ],
  "reportDate": "2024-01-15T12:00:00.000Z",
  "usersByActivity": {
    "highActivity": 2,
    "lowActivity": 4,
    "mediumActivity": 2,
  },
}
`;

exports[`should maintain consistent formatting across different data sets > dataset-2-html 1`] = `
"<!DOCTYPE html>
<html>
<head>
    <title>User Activity Report</title>
    <style>
        body { font-family: Arial, sans-serif; margin: 20px; }
        .header { background: #f5f5f5; padding: 20px; border-radius: 5px; }
        .summary { display: flex; gap: 20px; margin: 20px 0; }
        .metric { background: #e3f2fd; padding: 15px; border-radius: 5px; text-align: center; }
        table { width: 100%; border-collapse: collapse; margin-top: 20px; }
        th, td { border: 1px solid #ddd; padding: 8px; text-align: left; }
        th { background-color: #f2f2f2; }
        .active { color: green; font-weight: bold; }
        .inactive { color: red; }
    </style>
</head>
<body>
    <div class="header">
        <h1>User Activity Report</h1>
        <p>Period: 2024-01-01 to 2024-01-15</p>
    </div>
    
    <div class="summary">
        <div class="metric">
            <h3>8</h3>
            <p>Total Users</p>
        </div>
        <div class="metric">
            <h3>2</h3>
            <p>Active Users</p>
        </div>
        <div class="metric">
            <h3>25%</h3>
            <p>Activity Rate</p>
        </div>
    </div>
    
    <table>
        <thead>
            <tr>
                <th>Name</th>
                <th>Email</th>
                <th>Status</th>
                <th>Login Count</th>
                <th>Account Age (days)</th>
            </tr>
        </thead>
        <tbody>
            
                <tr>
                    <td>Alice Brown</td>
                    <td>alice.brown@example.com</td>
                    <td class="inactive">
                        Inactive
                    </td>
                    <td>0</td>
                    <td>15</td>
                </tr>
            
                <tr>
                    <td>Alice Brown</td>
                    <td>alice.brown@example.com</td>
                    <td class="inactive">
                        Inactive
                    </td>
                    <td>0</td>
                    <td>15</td>
                </tr>
            
                <tr>
                    <td>Bob Johnson</td>
                    <td>bob.johnson@example.com</td>
                    <td class="inactive">
                        Inactive
                    </td>
                    <td>5</td>
                    <td>730</td>
                </tr>
            
                <tr>
                    <td>Bob Johnson</td>
                    <td>bob.johnson@example.com</td>
                    <td class="inactive">
                        Inactive
                    </td>
                    <td>5</td>
                    <td>730</td>
                </tr>
            
                <tr>
                    <td>Jane Smith</td>
                    <td>jane.smith@example.com</td>
                    <td class="active">
                        Active
                    </td>
                    <td>75</td>
                    <td>180</td>
                </tr>
            
                <tr>
                    <td>Jane Smith</td>
                    <td>jane.smith@example.com</td>
                    <td class="active">
                        Active
                    </td>
                    <td>75</td>
                    <td>180</td>
                </tr>
            
                <tr>
                    <td>John Doe</td>
                    <td>john.doe@example.com</td>
                    <td class="active">
                        Active
                    </td>
                    <td>25</td>
                    <td>365</td>
                </tr>
            
                <tr>
                    <td>John Doe</td>
                    <td>john.doe@example.com</td>
                    <td class="active">
                        Active
                    </td>
                    <td>25</td>
                    <td>365</td>
                </tr>
            
        </tbody>
    </table>
</body>
</html>"
`;
